<resources>
    <string name="app_name">Student\'s</string>
    <string name="title_activity_maps">Map</string>
    <string name="place_api_key">AIzaSyB9MxxJBmzLHdfsMEZSdV0vORR_MRwirPI</string>

    <string name="select_school">Select school</string>
    <string name="select_class">Select class</string>
    <string name="save">save</string>
    <string name="student_name">Student Name</string>
    <string name="student_roll_id">Student Roll/ID</string>
    <string name="How_you_came_to_school">How you came to school</string>
    <string name="address">Address</string>
    <string name="search_school">Search school</string>
    <string name="get_location_on_searching">Get Location on Searching</string>
    <string name="set">set</string>
    <string name="children_s">Children\'s</string>
    <string name="add_student">Add Student</string>
    <string name="view_report">View Report</string>
    <string name="view_map">Student\'s Home</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string-array name="school">
        <item>Dhaka Residential Model College, Dhaka</item>
        <item>RAJUK Uttara Model College</item>
        <item><![CDATA[Ideal School & College, Dhaka]]></item>
        <item>Government Laboratory High School, Dhaka</item>
        <item>Viqarunnisa Noon School and College, Dhaka</item>
    </string-array>

    <string-array name="vehicle">
        <item>Bus</item>
        <item>Personal car</item>
        <item>Uber/Pathao</item>
        <item>CNG</item>
        <item>Rickshaw</item>
        <item>Walking</item>
        <item>Others</item>
    </string-array>

    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="student_address_tracking">Student address tracking</string>
    <string name="home">Home</string>
    <string name="total_student">Total student:</string>
    <string name="student_came_to_school">Student came to school</string>
    <string name="by_bus">By bus:</string>
    <string name="_100">100</string>
    <string name="privet_car">Privet car:</string>
    <string name="cng">CNG</string>
    <string name="uber_pathao">Uber/Pathao</string>
    <string name="by_rikshawa">By Rikshawa</string>
    <string name="walking">Walking:</string>
    <string name="other">Other</string>
</resources>
