<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentRegActivity"
    android:fitsSystemWindows="true"
    android:id="@+id/nav_drawer_maniActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include layout="@layout/toolbar_layout"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="20dp">
            <android.support.v7.widget.AppCompatAutoCompleteTextView
                android:id="@+id/actvSchoolSelect"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:completionHint="Select a school"
                android:completionThreshold="1"
                android:hint="@string/select_school"
                android:padding="5dp"
                android:maxLines="1"
                android:lines="1"
                android:imeOptions="actionNext"
                android:background="@drawable/border_gradient"
                android:popupBackground="@color/colorPrimary"
                android:layout_marginBottom="10dp"
                />
            <android.support.v7.widget.AppCompatAutoCompleteTextView
                android:id="@+id/actvClassSelect"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:completionHint="Select a class"
                android:completionThreshold="1"
                android:hint="@string/select_class"
                android:padding="5dp"
                android:imeOptions="actionNext"
                android:background="@drawable/border_gradient"
                android:popupBackground="@color/colorAccent"
                />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/colorPrimary"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etStudentName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/student_name"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/colorPrimary"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etStudentRoll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:hint="@string/student_roll_id"/>

            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_gradient">
                <Spinner
                    android:id="@+id/spSchoolCameWay"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:entries="@array/vehicle"
                    android:autofillHints="@string/How_you_came_to_school"
                    android:defaultFocusHighlightEnabled="true"
                    tools:ignore="UnusedAttribute">

                </Spinner>
            </LinearLayout>

            <Button
                android:id="@+id/btnGetStudentLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/address"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:drawableLeft="@drawable/ic_location_searching"
                android:padding="10dp"
                android:textAlignment="center"
                android:onClick="setAddress"
                />


            <Button
                android:id="@+id/btnSaveStudentInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_gradient"
                android:onClick="save"
                />
        </LinearLayout>
    </LinearLayout>
    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/navigationView"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/menu"
        >

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>