<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportActivity"
    android:fitsSystemWindows="true"
    android:id="@+id/nav_drawer_maniActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10"
        android:gravity="center">
        <include layout="@layout/toolbar_layout"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:gravity="bottom">
            <android.support.v7.widget.AppCompatAutoCompleteTextView
                android:id="@+id/actvSchoolSelect"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:completionHint="Select a school"
                android:completionThreshold="1"
                android:hint="@string/select_school"
                android:maxLines="1"
                android:textSize="14sp"
                android:textColorHint="@color/colorBlackFaide"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:drawableLeft="@drawable/ic_search_black"
                android:lines="1"
                android:theme="@style/autoCompliteTheme"
                android:textColor="@color/colorWhite"
                android:imeOptions="actionDone"
                android:background="@color/colorPrimary"
                android:popupBackground="@color/colorPrimary"
                android:padding="5dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8.5"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="bottom">
                    <TextView
                        android:textAlignment="textEnd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/total_student"
                        android:gravity="end" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="left">
                    <TextView
                        android:id="@+id/totalStudent"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="40sp"
                        android:textColor="@color/colorGreen"
                        />
                </LinearLayout>

                </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@color/colorPrimary"
                android:layout_marginBottom="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/colorWhite"
                    android:text="@string/student_came_to_school"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="10">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    android:weightSum="4"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        tools:ignore="NestedWeights"
                        android:orientation="horizontal"
                        android:layout_margin="2dp"
                        android:weightSum="3">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_margin="2dp"
                            android:background="@drawable/border"
                            android:layout_height="match_parent"
                            android:orientation="vertical">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Bus"
                                    android:textColor="@color/colorWhite" />

                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center">
                                <TextView
                                    android:id="@+id/budTv"
                                    android:textColor="@color/colorWhite"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="0"/>

                            </LinearLayout>


                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_margin="2dp"
                            android:background="@drawable/border"
                            android:layout_height="match_parent"
                            android:orientation="vertical">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Personal Car"
                                    android:textColor="@color/colorWhite"/>

                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center">
                                <TextView
                                    android:id="@+id/carTv"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/colorWhite"
                                    android:text="0"/>

                            </LinearLayout>

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_margin="2dp"
                            android:background="@drawable/border"
                            android:layout_height="match_parent"
                            android:orientation="vertical">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Uber/Pathao"
                                    android:textColor="@color/colorWhite"/>

                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center">
                                <TextView
                                    android:id="@+id/uberTv"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/colorWhite"
                                    android:text="0"/>

                            </LinearLayout>

                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:orientation="horizontal"
                        android:weightSum="4"
                        android:layout_margin="2dp">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_margin="2dp"
                            android:background="@drawable/border"
                            android:layout_height="match_parent"
                            android:orientation="vertical">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="CNG"
                                    android:textColor="@color/colorWhite"/>

                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center">
                                <TextView
                                    android:id="@+id/cngTv"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/colorWhite"
                                    android:text="0"/>

                            </LinearLayout>

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_margin="2dp"
                            android:background="@drawable/border"
                            android:layout_height="match_parent"
                            android:orientation="vertical">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Rickshaw"
                                    android:textColor="@color/colorWhite"/>

                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center">
                                <TextView
                                    android:id="@+id/rikshawaTv"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/colorWhite"
                                    android:text="0"/>

                            </LinearLayout>

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_margin="2dp"
                            android:background="@drawable/border"
                            android:layout_height="match_parent"
                            android:orientation="vertical">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Walking"
                                    android:textColor="@color/colorWhite"/>

                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center">
                                <TextView
                                    android:id="@+id/walkingTv"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/colorWhite"
                                    android:text="0"/>

                            </LinearLayout>

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_margin="2dp"
                            android:background="@drawable/border"
                            android:layout_height="match_parent"
                            android:orientation="vertical">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Others"
                                    android:textColor="@color/colorWhite"/>

                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center">
                                <TextView
                                    android:id="@+id/othersTv"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/colorWhite"
                                    android:text="0"/>

                            </LinearLayout>

                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:padding="10dp">
                    <!--<com.github.mikephil.charting.charts.PieChart
                        android:id="@+id/chart"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </com.github.mikephil.charting.charts.PieChart>-->
                </LinearLayout>


            </LinearLayout>


            </LinearLayout>


        </LinearLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/navigationView"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/menu"
        >

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>